--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,11 @@
 * {
   margin: 0
+  
 }
 
 body {
   background-color: #f5f6fa;
+  /* font-family: sans-serif; */
 }
 
 .app {
@@ -16,6 +18,10 @@ body {
   align-items: center;
   margin: 20px;
   justify-content: space-between;
+}
+
+.app-left {
+  flex: 0.9;
 }
 
 .app-stats {
