Fixed styling bug.  Adding styling to info boxes and line graph

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -13,6 +13,15 @@ body {
   justify-content: space-evenly;
 }
 
+.app-dropdown {
+  background-color:#f5f6fa;
+}
+
+.app-header > h1 {
+  color: #fc3c3c;
+  font-size: 2rem;
+}
+
 .app-header {
   display: flex;
   align-items: center;
@@ -27,6 +36,21 @@ body {
 .app-stats {
   display: flex;
   justify-content: space-between;
+}
+
+.app-right {
+  display: flex;
+  justify-content: space-between;
+}
+
+.app-right .MuiCardContent-root {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.app-graph {
+  flex-grow: 1;
 }
 
 @media (max-width: 990px) {
