--- a/src/css/App.css
+++ b/src/css/App.css
@@ -53,6 +53,10 @@ body {
   flex-grow: 1;
 }
 
+.app-graphTitle {
+  margin-top: 20px;
+}
+
 @media (max-width: 990px) {
   .app {
     flex-direction: column;
